<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".RegistrationFragment" >
    <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="94dp"
            tools:layout_editor_absoluteX="0dp"/>
    <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name"/>
    <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:ems="10"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress" tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name"/>
    <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"/>
    <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="@color/colorAccent"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="572dp"
            tools:layout_editor_absoluteX="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>